force-app/main/default/objects/Financial_Incentive__c/Financial_Incentive__c.object-meta.xml
<CustomObject>
    <description>This object will be used to build various grant process within salesforce application to various department like ES, BIA and BGS</description>
    <label>Financial Incentive</label>
    <nameField>
        <displayFormat>FIN-{YYYY}-{000000}</displayFormat>
        <label>Financial Incentive Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Incentives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>