force-app/main/default/objects/Financial_Incentive__c/fields/A_Canadian_citizen_or_permanent_resident__c.field-meta.xml
<CustomField>
    <fullName>A_Canadian_citizen_or_permanent_resident__c</fullName>
    <label>A Canadian citizen or permanent resident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Canadian Citizen</fullName>
            </value>
            <value>
                <fullName>Permanent Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>