force-app/main/default/objects/Financial_Incentive__c/fields/Acknowledgement_Signature_of_Chair__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Signature_of_Chair__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acknowledgement that BIA Board is aware of the Application</description>
    <inlineHelpText>Acknowledgement that BIA Board is aware of the Application</inlineHelpText>
    <label>Acknowledgement - Signature of Chair</label>
    <type>Checkbox</type>
</CustomField>