force-app/main/default/objects/Financial_Incentive__c/fields/Actual_Grant__c.field-meta.xml
<CustomField>
    <fullName>Actual_Grant__c</fullName>
    <label>Actual Grant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>