force-app/main/default/objects/Financial_Incentive__c/fields/Actual_Paid_Amount_for_2nd_Payment__c.field-meta.xml
<CustomField>
    <fullName>Actual_Paid_Amount_for_2nd_Payment__c</fullName>
    <label>Actual Paid Amount for 2nd Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>