force-app/main/default/objects/Financial_Incentive__c/fields/Additional_Condition_for_Application__c.field-meta.xml
<CustomField>
    <fullName>Additional_Condition_for_Application__c</fullName>
    <description>This field applicable to specify any additional condition that needs to be included in approved application notification sent to Client</description>
    <inlineHelpText>This field applicable to specify any additional condition that needs to be included in approved application notification sent to Client</inlineHelpText>
    <label>Additional Condition for Application</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>