force-app/main/default/objects/Financial_Incentive__c/fields/Additional_Support_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Support_Information__c</fullName>
    <description>Brief Outline of What support will be used for and What the deliverables will be</description>
    <inlineHelpText>Brief Outline of What support will be used for and What the deliverables will be</inlineHelpText>
    <label>Additional Support Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>