force-app/main/default/objects/Financial_Incentive__c/fields/Addresses_EDC_Strategy_Theme__c.field-meta.xml
<CustomField>
    <fullName>Addresses_EDC_Strategy_Theme__c</fullName>
    <label>Addresses EDC Strategy Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>