force-app/main/default/objects/Financial_Incentive__c/fields/Amending__c.field-meta.xml
<CustomField>
    <fullName>Amending__c</fullName>
    <description>Used for tracking amending agreements</description>
    <inlineHelpText>Used for tracking amending agreements</inlineHelpText>
    <label>Amending #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>