force-app/main/default/objects/Financial_Incentive__c/fields/Amount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved__c</fullName>
    <description>Manager should specify the value before Approving Grant Request</description>
    <inlineHelpText>Manager should specify the value before Approving Grant Request</inlineHelpText>
    <label>Amount Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>