force-app/main/default/objects/Financial_Incentive__c/fields/Amount_Approved_Formula__c.field-meta.xml
<CustomField>
    <fullName>Amount_Approved_Formula__c</fullName>
    <description>This field is used to format Amount Approved field value that will be shared on PDF email attachment to BIA Clients and not visible on page layout</description>
    <formula>IF(Amount_Approved__c&gt;0,&#39;$&#39;+CASE(LEN(TEXT(Amount_Approved__c)),
1, TEXT(Amount_Approved__c),
2, TEXT(Amount_Approved__c),
3, TEXT(Amount_Approved__c),
4, LEFT(TEXT(Amount_Approved__c), 1) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
5, LEFT(TEXT(Amount_Approved__c), 2) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
6, LEFT(TEXT(Amount_Approved__c), 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
7, LEFT(TEXT(Amount_Approved__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 2,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
8, LEFT(TEXT(Amount_Approved__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 3,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
9, LEFT(TEXT(Amount_Approved__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 4,3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
10, LEFT(TEXT(Amount_Approved__c), 1) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 2,3) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 5, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
11, LEFT(TEXT(Amount_Approved__c), 2) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 3,3) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 6, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
12, LEFT(TEXT(Amount_Approved__c), 3) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 4,3) &amp; &quot;,&quot; &amp; MID(TEXT(Amount_Approved__c), 7, 3) &amp; &quot;,&quot; &amp; RIGHT(TEXT(Amount_Approved__c), 3),
null),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used to format Amount Approved field value that will be shared on PDF email attachment to BIA Clients and not visible on page layout</inlineHelpText>
    <label>Amount Approved Formula</label>
    <type>Text</type>
</CustomField>