force-app/main/default/objects/Financial_Incentive__c/fields/Amount_of_Requested_Support__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Requested_Support__c</fullName>
    <label>Amount of Requested Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>