force-app/main/default/objects/Financial_Incentive__c/fields/Any_Financial_Assistance_Received__c.field-meta.xml
<CustomField>
    <fullName>Any_Financial_Assistance_Received__c</fullName>
    <description>Is there any additional financial assistance received or anticipated from federal, provincial or municipal source</description>
    <inlineHelpText>Is there any additional financial assistance received or anticipated from federal, provincial or municipal source</inlineHelpText>
    <label>Any Financial Assistance Received?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>