force-app/main/default/objects/Financial_Incentive__c/fields/Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Address__c</fullName>
    <formula>(IF(NOT(ISBLANK(Contact__r.MailingStreet)),Contact__r.MailingStreet+Br(),&#39;&#39;))+
(IF(NOT(ISBLANK(Contact__r.MailingCity)),Contact__r.MailingCity+Br(),&#39;&#39;))+
(IF(NOT(ISBLANK(Contact__r.MailingState)),Contact__r.MailingState+Br(),&#39;&#39;))+
IF(NOT(ISBLANK(Contact__r.MailingPostalCode)),Contact__r.MailingPostalCode+Br(),&#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Address</label>
    <type>Text</type>
</CustomField>