force-app/main/default/objects/Financial_Incentive__c/fields/Applicant_Fax__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Fax__c</fullName>
    <formula>Contact__r.Fax</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Applicant Fax</label>
    <type>Text</type>
</CustomField>