force-app/main/default/objects/Financial_Incentive__c/fields/Applicant_Status__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Status__c</fullName>
    <label>Applicant Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property Owner</fullName>
            </value>
            <value>
                <fullName>Business Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>