force-app/main/default/objects/Financial_Incentive__c/fields/Application_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Expiry_Date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()),10,31)</defaultValue>
    <description>This field will be default to Last Thursday of October</description>
    <inlineHelpText>This field will be default to Last Thursday of October</inlineHelpText>
    <label>Grant Expiry Date</label>
    <type>Date</type>
</CustomField>