force-app/main/default/objects/Financial_Incentive__c/fields/Application_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Extension_Date__c</fullName>
    <description>This date will be approved by Approver if extension is requested but should not be later than one year after Expiry date.</description>
    <inlineHelpText>This date will be approved by Approver if extension is requested but should not be later than one year after Expiry date.</inlineHelpText>
    <label>Grant Extension Date</label>
    <type>Date</type>
</CustomField>