force-app/main/default/objects/Financial_Incentive__c/fields/Application_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Received_Date__c</fullName>
    <description>The date the user submitted the application to the IMIT office i.e. the date the IMIT office receives the application.</description>
    <inlineHelpText>The date the user submitted the application to the IMIT office i.e. the date the IMIT office receives the application.</inlineHelpText>
    <label>Application Received Date</label>
    <type>Date</type>
</CustomField>