force-app/main/default/objects/Financial_Incentive__c/fields/Application_Stream__c.field-meta.xml
<CustomField>
    <fullName>Application_Stream__c</fullName>
    <label>Application Stream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Creative Arts</fullName>
            </value>
            <value>
                <fullName>DMS - Expansion</fullName>
            </value>
            <value>
                <fullName>DMS - New</fullName>
            </value>
            <value>
                <fullName>Fashion Venture</fullName>
            </value>
            <value>
                <fullName>Fashion Your Future</fullName>
            </value>
            <value>
                <fullName>Food Venture - New</fullName>
            </value>
            <value>
                <fullName>Food Venture - Original</fullName>
            </value>
            <value>
                <fullName>Ontario Works</fullName>
            </value>
            <value>
                <fullName>SC - Founder Institute</fullName>
            </value>
            <value>
                <fullName>SC - Helix</fullName>
            </value>
            <value>
                <fullName>Starter Company - General</fullName>
            </value>
            <value>
                <fullName>Starter Company - Original</fullName>
            </value>
            <value>
                <fullName>StarterSpace @Crossways</fullName>
            </value>
            <value>
                <fullName>Summer Company</fullName>
            </value>
            <value>
                <fullName>SC - Startup Boost</fullName>
            </value>
            <value>
                <fullName>SC - TorontoStarts</fullName>
            </value>
            <value>
                <fullName>SC - Music</fullName>
            </value>
            <value>
                <fullName>Starter Company Retail Accel Program</fullName>
                <default>true</default>
                <label>Starter Company Retail Accel Program</label>
            </value>
            <value>
                <fullName>Female Founders Program</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>