force-app/main/default/objects/Financial_Incentive__c/fields/Application_submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Application_submitted_by__c</fullName>
    <description>Thisis an indicator to track if this is an application that was created by the Applicant (i.e.external) vs. application created by an IMIT Administrator (i.e Internal)</description>
    <inlineHelpText>Thisis an indicator to track if this is an application that was created by the Applicant (i.e.external) vs. application created by an IMIT Administrator (i.e Internal)</inlineHelpText>
    <label>Application submitted by?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>