force-app/main/default/objects/Financial_Incentive__c/fields/Approvals_Extension_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Approvals_Extension_Agreement__c</fullName>
    <label>Approvals Extension Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>