force-app/main/default/objects/Financial_Incentive__c/fields/Are_you_18_and_over__c.field-meta.xml
<CustomField>
    <fullName>Are_you_18_and_over__c</fullName>
    <label>Are you 18 and over?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>