force-app/main/default/objects/Financial_Incentive__c/fields/Are_you_a_fulltime_or_Part_time_staff_of__c.field-meta.xml
<CustomField>
    <fullName>Are_you_a_fulltime_or_Part_time_staff_of__c</fullName>
    <label>Are you a fulltime or Part time staff of</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Time</fullName>
            </value>
            <value>
                <fullName>Part Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>