force-app/main/default/objects/Financial_Incentive__c/fields/Assessment_Number__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Number__c</fullName>
    <label>Assessment Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>