force-app/main/default/objects/Financial_Incentive__c/fields/Assessment_Roll_No__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Roll_No__c</fullName>
    <label>Assessment Roll No.</label>
    <length>100</length>
    <type>Text</type>
</CustomField>