force-app/main/default/objects/Financial_Incentive__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <description>Used for tracking assignment agreements</description>
    <inlineHelpText>Used for tracking assignment agreements</inlineHelpText>
    <label>Assignment #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>