force-app/main/default/objects/Financial_Incentive__c/fields/Average_Application_Score__c.field-meta.xml
<CustomField>
    <fullName>Average_Application_Score__c</fullName>
    <formula>IF(Total_Score_Cards__c&gt;0,Total_Application_Score__c/  Total_Score_Cards__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Application Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>