force-app/main/default/objects/Financial_Incentive__c/fields/Base_Year_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Year_Tax_Amount__c</fullName>
    <description>The amount calculated by multiplying the Current Value Assessment(s) applicable for the taxation year in which a Financial Incentive Agreement is signed for the Property upon which the Eligible Development is to be constructed, by the municipal tax rate(s) applicable for the Property, for that taxation year. The Base Municipal CVA Taxes shall be fixed in this manner for the purposes of determining the Municipal Tax Increment for the Eligible Development, subject to any adjustment arising from assessment appeals or changes to CVA made by the Municipal Property Assessment Corporation (&quot;MPAC&quot;) through requests for reconsideration, equity changes or gross error, and shall remain unchanged for the duration of the term of the payment of Development Grants for the Eligible Development.</description>
    <inlineHelpText>The amount calculated by multiplying the Current Value Assessment(s) applicable for the taxation year in which a Financial Incentive Agreement is signed for the Property upon which the Eligible Development is to be constructed</inlineHelpText>
    <label>Base Year Tax Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>