force-app/main/default/objects/Financial_Incentive__c/fields/BIC_Legacy_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>BIC_Legacy_Record_Id__c</fullName>
    <description>This field will hold Record Id of Business Incubation Grant records that will be migrated to Financial Incentive Object.</description>
    <inlineHelpText>This field will hold Record Id of Business Incubation Grant records that will be migrated to Financial Incentive Object.</inlineHelpText>
    <label>BIC Legacy Record Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>