force-app/main/default/objects/Financial_Incentive__c/fields/BIC_Report_Trigger_Date__c.field-meta.xml
<CustomField>
    <fullName>BIC_Report_Trigger_Date__c</fullName>
    <description>This date is Read Only field that will be Nov 15th every year and year will be automatically assigned based on BIC Grant Completion Status date.</description>
    <inlineHelpText>This date is Read Only field that will be Nov 15th every year and year will be automatically assigned based on BIC Grant Completion Status date.</inlineHelpText>
    <label>BIC Report Trigger Date</label>
    <type>Date</type>
</CustomField>