force-app/main/default/objects/Financial_Incentive__c/fields/Breakdown_of_how_you_spend_the_Grant__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_of_how_you_spend_the_Grant__c</fullName>
    <label>Breakdown of how you spend the Grant</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>