force-app/main/default/objects/Financial_Incentive__c/fields/Brief_Description_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Brief_Description_of_Project__c</fullName>
    <description>Brief description of Proposed Innoivation Fund Project</description>
    <inlineHelpText>Brief description of Proposed Innovation Fund Project</inlineHelpText>
    <label>Brief Description</label>
    <type>TextArea</type>
</CustomField>