force-app/main/default/objects/Financial_Incentive__c/fields/Briefly_describe_Brownfield_condition__c.field-meta.xml
<CustomField>
    <fullName>Briefly_describe_Brownfield_condition__c</fullName>
    <description>Briefly describe Brownfield condition (location,type of contamination,previous industrial history etc)</description>
    <inlineHelpText>Briefly describe Brownfield condition (location,type of contamination,previous industrial history etc)</inlineHelpText>
    <label>Briefly describe Brownfield condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>