force-app/main/default/objects/Financial_Incentive__c/fields/Brownfield_Remediation__c.field-meta.xml
<CustomField>
    <fullName>Brownfield_Remediation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmation the Record of Site Condition (RSC) has been filed and the testing and remediation invoices have been received.</description>
    <inlineHelpText>Brownfield Remediation      
• Record of Site Condition (RSC) filed 
• testing and remediation invoices received</inlineHelpText>
    <label>Brownfield Remediation</label>
    <type>Checkbox</type>
</CustomField>