force-app/main/default/objects/Financial_Incentive__c/fields/BRTA_Document_Verification__c.field-meta.xml
<CustomField>
    <fullName>BRTA_Document_Verification__c</fullName>
    <description>If BRTA has the applicant submitted a Phase II Site Assessment, Remediation Budget and any other required documents to support their application?</description>
    <inlineHelpText>If BRTA has the applicant submitted a Phase II Site Assessment, Remediation Budget and any other required documents to support their application?</inlineHelpText>
    <label>BRTA Document Verification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Is_site_considered_a_Brownfield__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>