force-app/main/default/objects/Financial_Incentive__c/fields/BRTA_Document_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>BRTA_Document_Verification_Comments__c</fullName>
    <description>BRTA Document Verification Comments</description>
    <inlineHelpText>BRTA Document Verification Comments</inlineHelpText>
    <label>BRTA Document Verification Comments</label>
    <type>TextArea</type>
</CustomField>