force-app/main/default/objects/Financial_Incentive__c/fields/Building_Permit_Number__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Number__c</fullName>
    <description>Permit number associated with above ground building permit</description>
    <inlineHelpText>Permit number associated with above ground building permit</inlineHelpText>
    <label>Building Permit Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>