force-app/main/default/objects/Financial_Incentive__c/fields/Building_Permit_Verification__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Verification__c</fullName>
    <description>Have any above grade Building Permits (except foundation or demolition) been received for the eligible development?</description>
    <inlineHelpText>Have any above grade Building Permits (except foundation or demolition) been received for the eligible development?</inlineHelpText>
    <label>Building Permit Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>