force-app/main/default/objects/Financial_Incentive__c/fields/Building_Permit_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Building_Permit_Verification_Comments__c</fullName>
    <description>Building Permit Verification Comments</description>
    <inlineHelpText>Building Permit Verification Comments</inlineHelpText>
    <label>Building Permit Verification Comments</label>
    <type>TextArea</type>
</CustomField>