force-app/main/default/objects/Financial_Incentive__c/fields/By_Law__c.field-meta.xml
<CustomField>
    <fullName>By_Law__c</fullName>
    <label>By Law</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>516 - 2008</fullName>
            </value>
            <value>
                <fullName>517 - 2008</fullName>
            </value>
            <value>
                <fullName>518 - 2008</fullName>
            </value>
            <value>
                <fullName>1323-2012</fullName>
            </value>
            <value>
                <fullName>1324-2012</fullName>
            </value>
            <value>
                <fullName>1325-2012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>