force-app/main/default/objects/Financial_Incentive__c/fields/City_Council_s_Approval_Doc_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>City_Council_s_Approval_Doc_Uploaded__c</fullName>
    <description>For IMIT grant that requires city council approval i.e. greater than 150M grant can only be Approved if City council&#39;s approval document has been uploaded.</description>
    <inlineHelpText>For IMIT grant that requires city council approval i.e. greater than 150M grant can only be Approved if City council&#39;s approval document has been uploaded.</inlineHelpText>
    <label>City Council&#39;s Approval Doc Uploaded</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>