force-app/main/default/objects/Financial_Incentive__c/fields/Client_Consultation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Consultation_Notes__c</fullName>
    <label>Client Consultation Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>