force-app/main/default/objects/Financial_Incentive__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Field for capturing any additional details related to IMIT Application</description>
    <inlineHelpText>Field for capturing any additional details related to IMIT Application</inlineHelpText>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>