force-app/main/default/objects/Financial_Incentive__c/fields/Committed_Grant__c.field-meta.xml
<CustomField>
    <fullName>Committed_Grant__c</fullName>
    <label>Committed Grant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>