force-app/main/default/objects/Financial_Incentive__c/fields/Completion_Date_of_Program_Duration__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_of_Program_Duration__c</fullName>
    <label>Completion Date of Program Duration</label>
    <type>Date</type>
</CustomField>