force-app/main/default/objects/Financial_Incentive__c/fields/Compliant_with_grant_spending__c.field-meta.xml
<CustomField>
    <fullName>Compliant_with_grant_spending__c</fullName>
    <label>Compliant with grant spending</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>