force-app/main/default/objects/Financial_Incentive__c/fields/Construction_Value_Verification__c.field-meta.xml
<CustomField>
    <fullName>Construction_Value_Verification__c</fullName>
    <description>Is the construction value greater than $1 Million?</description>
    <inlineHelpText>Is the construction value greater than $1 Million?</inlineHelpText>
    <label>Construction Value Verification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>