force-app/main/default/objects/Financial_Incentive__c/fields/Construction_Value_Verification_Comments__c.field-meta.xml
<CustomField>
    <fullName>Construction_Value_Verification_Comments__c</fullName>
    <description>Construction Value Verification Comments</description>
    <inlineHelpText>Construction Value Verification Comments</inlineHelpText>
    <label>Construction Value Verification Comments</label>
    <type>TextArea</type>
</CustomField>