force-app/main/default/objects/Financial_Incentive__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Financial Incentives</relationshipLabel>
    <relationshipName>Financial_Incentives</relationshipName>
    <type>Lookup</type>
</CustomField>