force-app/main/default/objects/Financial_Incentive__c/fields/Continued_Eligible_Use_attach_memo__c.field-meta.xml
<CustomField>
    <fullName>Continued_Eligible_Use_attach_memo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Annual compliance check conducted through an in-person site visit (by staff or contracted out to a third party) to ensure the subject property still contains the IMIT-eligible use and there has been no reduction in the Gross Floor Area for that use. Then, a confirmation memo is drafted confirming this.</description>
    <inlineHelpText>Annual compliance check conducted through an in-person site visit (by staff or contracted out to a third party) to ensure the subject property still contains the IMIT-eligible use and there has been no reduction in the Gross Floor Area for that use.</inlineHelpText>
    <label>Continued Eligible Use  (attach memo)</label>
    <type>Checkbox</type>
</CustomField>