force-app/main/default/objects/Financial_Incentive__c/fields/Contractor_Sub_Contractor_w_Lowest_Bid__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Sub_Contractor_w_Lowest_Bid__c</fullName>
    <description>Name of Contractor/Sub Contractor with lowest bid</description>
    <inlineHelpText>Name of Contractor/Sub Contractor with lowest bid</inlineHelpText>
    <label>Contractor/Sub Contractor w/ Lowest Bid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>