force-app/main/default/objects/Financial_Incentive__c/fields/Contractor_Sub_Contrct_w_2nd_lowest_bid__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Sub_Contrct_w_2nd_lowest_bid__c</fullName>
    <description>Name of Contractor/Sub Contractor with 2nd lowest bid</description>
    <inlineHelpText>Name of Contractor/Sub Contractor with 2nd lowest bid</inlineHelpText>
    <label>Contractor/Sub Contrct w/ 2nd lowest bid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>