force-app/main/default/objects/Financial_Incentive__c/fields/Corporation_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Name__c</fullName>
    <label>Corporation Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>